@@ -1013,7 +1013,7 @@ EOF
 	echo powerpcle-${VENDOR}-linux-${LIBC}
 	exit ;;
     s390:Linux:*:* | s390x:Linux:*:*)
-	echo ${UNAME_MACHINE}-ibm-linux-${LIBC}
+	echo ${UNAME_MACHINE}-${VENDOR}-linux-${LIBC}
 	exit ;;
     sh64*:Linux:*:*)
 	echo ${UNAME_MACHINE}-${VENDOR}-linux-${LIBC}
